# chess_bot

./: .gitignore  App.js  LICENSE  README.md  UI.js  chess_bot.sln  config.env  package-lock.json  package.json
chess_engine/: CMakeLists.txt  Database.cpp  chess_engine.cpp  chess_engine.sln  chess_engine.vcxproj  chess_engine.vcxproj.filters  data.db-journal  depth1.cpp  depth2.cpp  depth3.cpp  depth4.cpp  depth5.cpp  depth6.cpp  main.cpp  output.txt  readme.txt  sqlite3.exp  sqlite3.lib
chess_engine/Classes/: EvalPoint.cpp  ai.cpp  board.cpp  database.cpp  generic_helper_functions.cpp  move.cpp  node.cpp  piece.cpp  point.cpp  utilities.cpp  zobrist.cpp
chess_engine/Classes/Headers/: EvalPoint.h  ai.h  board.h  constants.h  database.h  doubly_linked_list.h  engine.h  generic_helper_functions.h  move.h  node.h  piece.h  point.h  utilities.h  zobrist.h
chess_engine/Classes/Pieces/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp  rook.cpp
chess_engine/Debug/: chess_engine.exe.recipe  chess_engine.ilk  chess_engine.vcxproj.FileListAbsolute.txt  vc142.idb
chess_engine/Debug/chess_engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  chess_engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
chess_engine/Engines/: CMakeList.txt  depth1.cpp  depth2.cpp  depth3.cpp  depth4.cpp  depth5.cpp  depth6.cpp
chess_engine/pgn_hasher/: pgn_hasher.cpp  pgn_hasher.h  pgn_hasher.vcxproj  pgn_hasher.vcxproj.filters
chess_engine/profiler/: profiler.vcxproj  profiler.vcxproj.filters
chess_engine/tests/: CMakeTests.txt
(+57 files in other folders)
